--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     "build": "tailwindcss build ./src/assets/css/style.css -o ./dist/style.css"
   },
   "author": "zmatezz",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "tailwindcss": "^3.3.5"
+  }
 }
